--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="navBar" >
         <div class="lefty">
             <div class="imgC">
-            <img src="../img/text.png">
+            <img src="./img/text.png">
             </div>
             <div class="textHeading">Text Editor</div>
         </div>
